log
Tue 21 Mar 2023 11:52:52 PM UTC: 
 tests:  0|6
total_score: 0/70
bd5a0c1
Thu 23 Mar 2023 03:54:02 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fe2c4fc
Thu 23 Mar 2023 04:01:08 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f5d1109
Thu 23 Mar 2023 04:04:10 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   38 |   scanf("%i", &dato);
      |   ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
39b655b
Thu 23 Mar 2023 04:07:25 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
7454b00
Thu 23 Mar 2023 04:17:02 PM UTC: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
2367707
Thu 23 Mar 2023 04:18:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4e2749d
Thu 23 Mar 2023 04:22:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d07d99e
Thu 23 Mar 2023 04:26:12 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
df9b0cf
Thu 23 Mar 2023 04:27:36 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d75f1ee
Thu 23 Mar 2023 06:04:58 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c8ad448
Thu 23 Mar 2023 06:09:16 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
832a217
Thu 23 Mar 2023 06:12:47 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:20: error: ‘*(Node *)malloc (24).data’ is used uninitialized [-Werror=uninitialized]
   41 |     list -> head = createNode(list -> head -> data);
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c653a7c
